ZMCIntegral/range2.152906.err
  File "./range-02.py", line 206
    MC = ZMCIntegral.MCintegral(modDs_real,[[kxi,kxf],[kyi,kyf],[qxi,qxf])
                                                                         ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
